# llm-mlops

./: .env  .gitignore  pyproject.toml
app/data_collection/: blog_data.py
app/embedding_server/: bentofile.yaml  service.py
app/llm_server/: bentofile.yaml  graph.py  service.py  state.py  tools.py
app/llm_server/utils/: env_setup.py
app/vectorstore/: docker-compose.yaml  opensearch_hybrid.py
scripts/: bento_build.sh  llm_server_container_build.sh  run_containers.sh
